--- a/Bloop.GitHub/GitHubPluginSettings.xaml
+++ b/Bloop.GitHub/GitHubPluginSettings.xaml
@@ -2,17 +2,26 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Bloop.GitHub"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10" VerticalAlignment="Top" >
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Label Content="Personal GitHub Token:"/>
-            <TextBox Name="Token" Text="" Width="178" VerticalAlignment="Center" TextChanged="Token_TextChanged"/>
+            <Label Content="Personal GitHub Token (repo scope):"/>
+            <TextBox Name="Token" Text="" Width="250" VerticalAlignment="Center" TextChanged="Token_TextChanged"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <Label Content="Repositories Folder:"/>
+            <TextBox Name="RepoRoot" Text="" Width="178" VerticalAlignment="Center" TextChanged="RepoRoot_TextChanged"/>
+            <Button Click="Browse_Click">Browse</Button>
+        </StackPanel>
+        <StackPanel Name="Shells" Grid.Row="2" Orientation="Vertical">
+            <Label Content="Shell"/>
         </StackPanel>
     </Grid>
 </UserControl>
